# Maxwell_Demon_IPT

./: CMakeLists.txt  README.md  requirements-ml-gpu.txt  requirements.txt
config/: driven_friction.cfg  one_population.cfg  strong_separation_demo.cfg  two_population.cfg
designs/: README.md  design_smoke.csv
docs/: EULER.md  PHASE2.md
euler/: README.md  benchmark_cpu.sbatch  build_cpu.sbatch  check_resources.sh  collect_dataset.sbatch  collect_for_job.sh  probe_gpu.sbatch  run_array_cpu.sbatch  setup_python_venv.sh  start_cpu_sweep.sh  start_gpu_training.sh  train_gpu.sbatch
examples/: run_local.sh  run_parallel_sweep.sh
include/: config.hpp  equilibrium.hpp  io.hpp  particle.hpp  simulation.hpp  species.hpp
maxwell-demon-sim/: .gitignore  CMakeLists.txt  README.md
maxwell-demon-sim/config/: default.cfg  smoke.cfg
maxwell-demon-sim/include/: config.hpp  demon.hpp  io.hpp  particle.hpp  simulation.hpp
maxwell-demon-sim/scripts/: animate.py  plots.py  run_sweep.py
maxwell-demon-sim/src/: config.cpp  demon.cpp  io.cpp  main.cpp  simulation.cpp
ml/: README.md  build_dataset.py  optimize_layout.py  plot_dataset.py  predict.py  train_surrogate.py
scripts/: animate.py  block_diagrams.py  check_sweep_status.py  generate_config_from_design.py  generate_design.py  live_temperature_plot.py  plots.py
simulation/: README.md  make_gif.sh  run_big_local.sh  run_local_demo.sh  run_two_species_demo.sh
simulation/configs/: local_big_run.cfg  local_demo_separation.cfg  local_two_species_demo.cfg  (+1 more)
src/: config.cpp  equilibrium.cpp  io.cpp  simulation.cpp
(+1 files in other folders)
